Update to get Xpath value of the PDF Template
Changed the button that needs to be pressed and using javascript to make it work

--- a/Code/UmbracoPDF/Views/ContentBlocks/PDFDownloadButton.cshtml
+++ b/Code/UmbracoPDF/Views/ContentBlocks/PDFDownloadButton.cshtml
@@ -1,30 +1,34 @@
 ﻿@inherits Umbraco.Web.Mvc.UmbracoViewPage<PDfdownloadButton>
 
 @{
-	Layout = null;
+    Layout = null;
 
-    var linkText = Model.LinkText;
+    var linkText = "DOWNLOAD";
     var saveAsName = "TEST";
-   
-}
-    <input type="button" id="btnSendData" value="Send Data" onclick="DoSendData()" />
-
-
-    <a href="@Url.Action("GeneratePDF", "PDF", new { filename = saveAsName })">@linkText</a>
-
-    <script>
-
-function DoSendData()
-{
-            var divHtml = $('#mainContent').text()
-
-            $.ajax({
-                url: "/",
-                data: { divHtml },
-                method: 'POST',
-                success: function (data) { alert(data); }
-            });
 
 }
 
-    </script>
+
+
+<div class="pdfButton">
+<button class="btn btnSecondary pdfDownload" onclick="downloadPdf();">Download PDF Version</button>
+
+    <form id="frmCreatePDF" action="/umbraco/surface/PDF/GeneratePDF" method="post" style="display:none">
+        <input type="text" id="btnSendData" name="btnSendData" value="" />
+    </form>
+
+</div>
+
+
+
+<script>
+
+    function downloadPdf() {
+        $("div.mainContent").not("div.pdfButton").text();
+        $("#frmCreatePDF").submit();
+
+        console.log(divHtml);
+
+    }
+
+</script>
