--- a/Code/UmbracoPDF/Views/Home.cshtml
+++ b/Code/UmbracoPDF/Views/Home.cshtml
@@ -1,12 +1,12 @@
 ﻿@inherits UmbracoViewPage<Home>
 
 @{
-	Layout = null;
+    Layout = null;
 }
- 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-            crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous"></script>
 
 @* <a href="@Url.Action("GeneratePDF", "PDF")">Download Owain.Codes as PDF</a>*@
 
@@ -14,11 +14,19 @@
 @* Step 2 - Get Nested Content working*@
 
 
-<div id="mainContent">
-    TEST
-</div>
+<div class="mainContent">
 
     @if (Model.MainContent != null)
     {
         @Html.Partial("ContentBlocks/DisplayContentBlocks", Model.MainContent)
     }
+</div>
+
+@if (Model.PdfThisPage == true)
+{
+    <div class="pdfButton">
+        @Html.Partial("ContentBlocks/PDFDownloadButton", new PDfdownloadButton(Model))
+    </div>
+
+
+}
