--- a/Code/UmbracoPDF/Views/Home.cshtml
+++ b/Code/UmbracoPDF/Views/Home.cshtml
@@ -14,7 +14,7 @@
 @* Step 2 - Get Nested Content working*@
 
 
-<div class="mainContent">
+<div class="mainContent" id="mainContent">
 
     @if (Model.MainContent != null)
     {
@@ -25,7 +25,7 @@
 @if (Model.PdfThisPage == true)
 {
     <div class="pdfButton">
-        @Html.Partial("ContentBlocks/PDFDownloadButton", new PDfdownloadButton(Model))
+        @Html.Partial("ContentBlocks/PDFDownloadButton", new UmbracoPDF.Core.Models.PDFViewModel(Model))
     </div>
 
 
