A step closer - "No parameterless constructor defined for this object."

--- a/Code/UmbracoPDF/Views/ContentBlocks/DisplayContentBlocks.cshtml
+++ b/Code/UmbracoPDF/Views/ContentBlocks/DisplayContentBlocks.cshtml
@@ -7,7 +7,7 @@
         switch(contentBlock.ContentType.Alias)
         {
           case PDfdownloadButton.ModelTypeAlias:
-                @Html.Partial("ContentBlocks/PDFDownloadButton", new MainContent(contentBlock))
+                @Html.Partial("ContentBlocks/PDFDownloadButton", new PDfdownloadButton(contentBlock))
                 break;
 
             case RichtextEditor.ModelTypeAlias:
