Introduced the ViewModel to pass data back to the controller

--- a/Code/UmbracoPDF/Views/ContentBlocks/PDFDownloadButton.cshtml
+++ b/Code/UmbracoPDF/Views/ContentBlocks/PDFDownloadButton.cshtml
@@ -32,7 +32,7 @@
         var content = document.getElementById("mainContent");
         localStorage.setItem("pdfMe", content.innerHTML);
 
-        $("#formData").val(JSON.stringify(localStorage));
+        //$("#formData").val(JSON.stringify(localStorage));
         $("#frmCreatePDF").submit();
 
     }
